adicionando orm sequelize ao projeto

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,16 @@
 # HTTP
-
-PORT=3333
+PORT=
 
 # DEVELOPMENT
+NODE_ENV=
 
-NODE_ENV=development
+# Auth
+APP_SECRET=
+
+
+# Database
+
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
