--- a/package.json
+++ b/package.json
@@ -20,9 +20,16 @@
     "sucrase": "^3.12.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "youch": "^2.0.10"
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^7.18.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.4",
+    "sequelize-cli": "^5.5.1",
+    "youch": "^2.0.10",
+    "yup": "^0.28.1"
   }
 }
