--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
   postgres:
-    image: postgres:9.0
+    image: postgres:12.1
     container_name: postgres
     network_mode: 'host'
     ports:
@@ -10,4 +10,4 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: q1w2e3
-      POSTGRES_DB: gobarber
+      POSTGRES_DB: hackathon
