--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
     "nodemon": "^2.0.2",
-    "prettier": "^1.19.1",
-    "sucrase": "^3.12.1"
+    "prettier": "^1.19.1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -29,6 +28,7 @@
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.4",
     "sequelize-cli": "^5.5.1",
+    "sucrase": "^3.12.1",
     "youch": "^2.0.10",
     "yup": "^0.28.1"
   }
